--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "target": "es5",
+    "forceConsistentCasingInFileNames": true,
     "plugins": [
       {
         "name": "next"
